--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Tbs-Gy-NzP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lGv-iu-rmI">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -600,28 +600,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1uB-9j-qZd">
-                                <rect key="frame" x="0.0" y="303" width="375" height="207"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tu app de gestión empresarial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UUo-HP-exF">
-                                        <rect key="frame" x="77" y="128" width="220.33333333333337" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <color key="textColor" red="0.56862745098039214" green="0.66274509803921566" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dicloud_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="idU-Ce-ghl">
-                                        <rect key="frame" x="94" y="72" width="187" height="48"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tu app de gestión empresarial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UUo-HP-exF">
+                                <rect key="frame" x="77" y="438" width="232" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="tQC-zJ-XT2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <color key="textColor" red="0.56862745098039214" green="0.66274509803921566" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dicloud_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="idU-Ce-ghl">
+                                <rect key="frame" x="94" y="359" width="187" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="F2y-qp-lmf"/>
+                                    <constraint firstAttribute="width" constant="187" id="M5Y-00-ycY"/>
+                                    <constraint firstAttribute="width" secondItem="idU-Ce-ghl" secondAttribute="height" multiplier="187:48" id="bfJ-21-LrT"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="1uB-9j-qZd" firstAttribute="centerY" secondItem="wIk-Hm-tez" secondAttribute="centerY" id="Qg3-rn-ea2"/>
-                            <constraint firstItem="1uB-9j-qZd" firstAttribute="centerX" secondItem="wIk-Hm-tez" secondAttribute="centerX" id="ZqZ-T6-c4T"/>
+                            <constraint firstItem="idU-Ce-ghl" firstAttribute="top" secondItem="4bi-sX-NM6" secondAttribute="top" constant="315" id="Tyu-v3-efq"/>
+                            <constraint firstItem="UUo-HP-exF" firstAttribute="top" secondItem="4bi-sX-NM6" secondAttribute="top" constant="394" id="kz4-ag-AKJ"/>
+                            <constraint firstItem="idU-Ce-ghl" firstAttribute="centerX" secondItem="wIk-Hm-tez" secondAttribute="centerX" id="tFe-LJ-C94"/>
+                            <constraint firstItem="UUo-HP-exF" firstAttribute="centerX" secondItem="wIk-Hm-tez" secondAttribute="centerX" id="vm0-Ib-TLE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4bi-sX-NM6"/>
                     </view>
