--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lGv-iu-rmI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Tbs-Gy-NzP">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -592,46 +592,6 @@
             </objects>
             <point key="canvasLocation" x="1900" y="1670.6896551724139"/>
         </scene>
-        <!--Main-->
-        <scene sceneID="Vbn-cn-wpa">
-            <objects>
-                <viewController id="lGv-iu-rmI" customClass="Main" customModule="Dicloud" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wIk-Hm-tez">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tu app de gestión empresarial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UUo-HP-exF">
-                                <rect key="frame" x="77" y="438" width="232" height="18"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="18" id="tQC-zJ-XT2"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <color key="textColor" red="0.56862745098039214" green="0.66274509803921566" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dicloud_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="idU-Ce-ghl">
-                                <rect key="frame" x="94" y="359" width="187" height="48"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="F2y-qp-lmf"/>
-                                    <constraint firstAttribute="width" constant="187" id="M5Y-00-ycY"/>
-                                    <constraint firstAttribute="width" secondItem="idU-Ce-ghl" secondAttribute="height" multiplier="187:48" id="bfJ-21-LrT"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="idU-Ce-ghl" firstAttribute="top" secondItem="4bi-sX-NM6" secondAttribute="top" constant="315" id="Tyu-v3-efq"/>
-                            <constraint firstItem="UUo-HP-exF" firstAttribute="top" secondItem="4bi-sX-NM6" secondAttribute="top" constant="394" id="kz4-ag-AKJ"/>
-                            <constraint firstItem="idU-Ce-ghl" firstAttribute="centerX" secondItem="wIk-Hm-tez" secondAttribute="centerX" id="tFe-LJ-C94"/>
-                            <constraint firstItem="UUo-HP-exF" firstAttribute="centerX" secondItem="wIk-Hm-tez" secondAttribute="centerX" id="vm0-Ib-TLE"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="4bi-sX-NM6"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="88j-F4-VO3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-804" y="29.55665024630542"/>
-        </scene>
         <!--LoginVC-->
         <scene sceneID="D9S-OS-TTx">
             <objects>
@@ -640,7 +600,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Alias" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O76-BN-ibB" customClass="textfieldDesign" customModule="Dicloud" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Alias" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O76-BN-ibB">
                                 <rect key="frame" x="85.666666666666686" y="266" width="204" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="204" id="E4o-qQ-Bhq"/>
@@ -658,7 +618,7 @@
                                     <action selector="nicknameTouched:" destination="Tbs-Gy-NzP" eventType="touchDown" id="B3y-wn-hCj"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sV4-e4-2DO" customClass="textfieldDesign" customModule="Dicloud" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sV4-e4-2DO">
                                 <rect key="frame" x="85.666666666666686" y="356" width="204" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="204" id="FdW-ZW-vr9"/>
@@ -676,7 +636,7 @@
                                     <action selector="usernameTouched:" destination="Tbs-Gy-NzP" eventType="touchDown" id="dQZ-MV-Wd9"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CoB-Wa-faq" customClass="textfieldDesign" customModule="Dicloud" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CoB-Wa-faq">
                                 <rect key="frame" x="85.666666666666686" y="449" width="204" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="204" id="bzD-UF-YfK"/>
@@ -852,7 +812,6 @@
     </scenes>
     <resources>
         <image name="Image" width="16" height="16"/>
-        <image name="dicloud_icon.png" width="187" height="48"/>
         <image name="disoft_mouse.png" width="170" height="170"/>
         <image name="icons8-checked-24.png" width="24" height="24"/>
         <image name="icons8-home-page-24.png" width="24" height="24"/>
